Fixing horizontal scroll.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,3 +12,7 @@
 @import "components/components";
 
 // Etc.
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
+}
